INFO PodiumD 4.6 first update: ZAC 4.1.0

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2397,7 +2397,7 @@ pabc:
       authority: ""
       clientId: "pabc"
       clientSecret: ""
-      functioneelBeheerderRole: "administrator"
+      functioneelBeheerderRole: ""
       nameClaimType: "name"
       roleClaimType: "roles"
       emailClaimType: "email"
