--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -64,7 +64,7 @@ dependencies:
     condition: infinispan.enabled
   - name: zaakafhandelcomponent
     alias: zac
-    version: 1.0.165
+    version: 1.0.174 # ZAC Sprint 62 helm release
     repository: "@zac"
     condition: zac.enabled
     tags:
