Set zac image tag to 4.1.0

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1943,6 +1943,8 @@ kiss:
 zac:
   featureFlags:
     pabcIntegration: false
+  image:
+    tag: 4.1.0 
   auth:
     server: http://keycloak.example.nl
     realm: podiumd
