Tighter filtering on paths

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -110,32 +110,82 @@ keycloak:
   fullnameOverride: keycloak
   ingress:
     enabled: true
-    hostname: keycloak.example.nl
+    hostname: "keycloak.example.nl"
     ingressClassName: nginx
     tls: true
     hostnameStrict: true
+    annotations:
+      # Rate limiting for public endpoints
+      nginx.ingress.kubernetes.io/limit-rps: "50"
+      # Block all admin paths on public ingress
+      nginx.ingress.kubernetes.io/configuration-snippet: |
+        # Block ALL admin paths on public ingress
+        location ~ ^/admin {
+          deny all;
+          return 404;
+        }
+        # Block resource paths on public ingress
+        location ~ ^/(resources|js) {
+          deny all;
+          return 404;
+        }
+        # Block self-service paths on public ingress
+        location ~ ^/realms/*/account/* {
+          deny all;
+          return 404;
+        }
+        # Block management/metrics endpoints
+        location ~ ^/(metrics|health) {
+          deny all;
+          return 404;
+        }
+        # Block master realm on public ingress
+        location ~ ^/realms/master/ {
+          deny all;
+          return 404;
+        }
   adminIngress:
     enabled: true
-    hostname: keycloak-admin.example.nl
+    hostname: "keycloak-admin.example.nl"
     ingressClassName: nginx
     tls: true
     annotations:
       # Restrict admin console access to specific IP ranges (VPN, office network, etc.)
       # Replace these with your actual trusted IP ranges
       # nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
+      # Rate limiting to prevent brute force attacks
+      nginx.ingress.kubernetes.io/limit-rps: "10"
       # Additional security headers
       nginx.ingress.kubernetes.io/configuration-snippet: |
-        # Block direct access to sensitive paths
-        location ~ ^/admin/.*/console/config {
+        # Block sensitive configuration endpoints
+        location ~ ^/admin/.*/console/config$ {
           deny all;
+          return 403;
         }
-      #  location ~ ^/realms/master/protocol/openid-connect/token {
-      #    # Restrict master realm token endpoint
-      #    allow 10.0.0.0/8;
-      #    allow 172.16.0.0/12;
-      #    allow 192.168.0.0/16;
-      #    deny all;
-      #  }
+        location ~ ^/admin/.*/console/whoami$ {
+          deny all;
+          return 403;
+        }
+        
+        # Block server info endpoint (version disclosure)
+        location = /admin/serverinfo {
+          deny all;
+          return 403;
+        }
+        
+        # Restrict master realm access, allow actual trusted IP ranges
+        # location ~ ^/realms/master/ {
+        #   allow 10.0.0.0/8;
+        #   allow 172.16.0.0/12;
+        #   allow 192.168.0.0/16;
+        #   deny all;
+        # }
+        
+        # Block management endpoints (should use port 9000 internally)
+        location ~ ^/(metrics|health) {
+          deny all;
+          return 404;
+        }
   keycloakConfigCli:
     cleanupAfterFinished:
       enabled: true
