--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1610,6 +1610,7 @@ openinwoner:
     email:
       port: 587
       useTLS: true
+    searchIndexInitContainer: true
   persistence:
     size: 10Gi
     existingClaim: openinwoner
@@ -1658,6 +1659,10 @@ openinwoner:
   eck-elasticsearch:
     enabled: true
     version: "9.2.0"
+    http:
+      tls:
+        selfSignedCertificate:
+          disabled: true
   eck-operator:
     enabled: false
 
