Disable Admin OTP by default - as it was before.

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -59,7 +59,7 @@ keycloak:
     #        role: "admin"
     # -- identity provider mapper for the admin realm
     #adminIdentityProviderMappers: {}
-    adminOtpEnabled: true
+    adminOtpEnabled: false
     realm: podiumd
     realmDisplayName: PodiumD
     realmFrontendUrl: https://keycloak.example.nl
