Feature: Patch podiumd 4.5.9 (#218)
# Patch PodiumD 4.5.9

Default waardes toegevoegd voor ZAC BRP koppeling met aanbieder
iConnect:
```yaml
zac:
  brpApi:
    protocollering:
      aanbieder: ""
      # Voor aanbieder iConnect worden de volgende "standaard" waardes gebruikt
      # Voor andere aanbieders zijn deze waardes niet van belang en worden niet gebruikt    
      doelbinding:
        zoekmet: "BRPACT-ZoekenAlgemeen"
        raadpleegmet: "BRPACT-ZacPersoonBasis"
      verwerkingsregister: "DigitaleDienstverlening"
```

---------

Co-authored-by: sytskevanhasselt <sytske@icatt.nl>

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1964,6 +1964,12 @@ zac:
     # Protocollering aanbieder mag zijn "", "iConnect", "2Secure"
     protocollering:
       aanbieder: ""
+      # Voor aanbieder iConnect worden de volgende "standaard" waardes gebruikt
+      # Voor andere aanbieders zijn deze waardes niet van belang en worden niet gebruikt
+      doelbinding:
+        zoekmet: "BRPACT-ZoekenAlgemeen"
+        raadpleegmet: "BRPACT-ZacPersoonBasis"
+      verwerkingsregister: "DigitaleDienstverlening"
   catalogusDomein: ALG
   contextUrl: http://zac.example.nl
   db:
