--- a/charts/podiumd/templates/api-proxy-configmap.yaml
+++ b/charts/podiumd/templates/api-proxy-configmap.yaml
@@ -25,6 +25,20 @@ data:
       sendfile on;
       keepalive_timeout 65;
 
+    {{- if .Values.apiproxy.locations.brp.toepassingHeaderRequired }}
+      # The BRP API requires a custom header (x-toepassing) to be set based on the incoming Host header. We use an
+      # Nginx map for this purpose, which allows us to define mappings in the Helm values file.
+      map $http_host $toepassing_header {
+        hostnames;
+        default "";
+      {{- with .Values.apiproxy.locations.brp.hostToepassingMapping }}
+        {{- range . }}
+        {{ .host }}.podiumd.svc.cluster.local {{ .toepassing }};
+        {{- end }}
+      {{- end }}
+      }
+    {{- end }}
+
       server {
         listen 8080;
         server_tokens off;
@@ -69,6 +83,9 @@ data:
           proxy_ssl_session_reuse on;
           proxy_ssl_server_name on;
           proxy_set_header Host {{ .Values.apiproxy.locations.brp.hostHeader }};
+    {{- if .Values.apiproxy.locations.brp.toepassingHeaderRequired }}
+          proxy_set_header x-toepassing $toepassing_header;
+    {{- end }}
           proxy_http_version 1.1;
         }
 
