--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2266,6 +2266,15 @@ apiproxy:
       <<: *commonLocation
       path: /haalcentraal/api/brp/
       targetUrl: "https://lab.api.mijniconnect.nl/iconnect/apihcbrp/actueel/prtcl/v2/"
+      # Voor iConnect is het verplicht om een X-Toepassing header mee te sturen met de naam van de toepassing die
+      # de BRP API aanroept. In onderstaande mapping moet je alle hosts opnemen die gebruik maken van de apiproxy en
+      # daarin de juiste toepassing zetten. Voor andere aanbieders zijn deze waardes niet van belang.
+      toepassingHeaderRequired: false
+      hostToepassingMapping:
+        - host: contact
+          toepassing: kiss
+        - host: zac
+          toepassing: zac
     kvkSearch:
       <<: *commonLocation
       targetUrl: "https://lab.api.mijniconnect.nl/iconnect/apikvk/zoeken/v2/zoeken"
