--- a/.github/workflows/release-snapshot.yaml
+++ b/.github/workflows/release-snapshot.yaml
@@ -63,6 +63,7 @@ jobs:
         run: |
           helm repo add maykinmedia https://maykinmedia.github.io/charts
           helm repo add opentelemetry https://open-telemetry.github.io/opentelemetry-helm-charts
+          helm repo add wiremind https://wiremind.github.io/wiremind-helm-charts
           helm repo add dimpact https://Dimpact-Samenwerking.github.io/helm-charts
           helm repo add elastic https://helm.elastic.co
           helm repo add kiss-frontend https://raw.githubusercontent.com/Klantinteractie-Servicesysteem/KISS-frontend/main/helm
