datamigratie image tags 0.0.3 toegevoegd

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2426,10 +2426,10 @@ datamigratie:
   postgresql:
     enabled: false
   image:
-    tag: ""
+    tag: "0.0.3"
   migrations:
     image:
-      tag: ""
+      tag: "0.0.3"
 
   settings:
     database:
