featureFlags.enableTestHelpers onder settings

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2459,5 +2459,8 @@ datamigratie:
         baseUrl: ""
         apiKey: ""
 
+    featureFlags:
+      enableTestHelpers: false
+
   ingress:
     enabled: false
