--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -60,7 +60,7 @@ dependencies:
       - contact
   - name: infinispan
     version: 0.5.0
-    repository: "oci://quay.io/openshift-helm-charts"
+    repository: "@openshift"
     condition: infinispan.enabled
   - name: zaakafhandelcomponent
     alias: zac
