--- a/charts/podiumd/templates/keycloak-podiumd-realm-config.yaml
+++ b/charts/podiumd/templates/keycloak-podiumd-realm-config.yaml
@@ -3,37 +3,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.keycloak.keycloakConfigCli.existingConfigmap }}
+  name: keycloak-podiumd-realm-config
   labels:
     {{- include "podiumd.labels" . | nindent 4 }}
     app.kubernetes.io/component: keycloak-config-cli
 data:
-  master.yaml: |
-    realm: master
-    attributes:
-      frontendUrl: {{ .Values.keycloak.config.adminFrontendUrl | quote }}
-    browserSecurityHeaders:
-      xContentTypeOptions: "nosniff"
-      xRobotsTag: "none"
-      xFrameOptions: "SAMEORIGIN"
-      contentSecurityPolicy: "frame-src 'self'; frame-ancestors 'self'; object-src 'none';"
-      xXSSProtection: "1; mode=block"
-      strictTransportSecurity: ""
-{{- if .Values.keycloak.config.adminOtpEnabled }}
-    requiredActions:
-      - name: "Configure OTP"
-        providerId: CONFIGURE_TOTP
-        enabled: "true"
-        defaultAction: "true"
-        alias: CONFIGURE_TOTP
-{{- end }}
-{{- with .Values.keycloak.config.adminIdentityProviders }}
-    {{- toYaml . | nindent 4 }}
-{{- end }}
-{{- with .Values.keycloak.config.adminIdentityProviderMappers }}
-    {{- toYaml . | nindent 4 }}
-{{- end }}
-  realm.yaml: |
+  podiumd.yaml: |
     realm: {{ .Values.keycloak.config.realm }}
     enabled: true
     displayName: {{ .Values.keycloak.config.realmDisplayName }}
@@ -800,5 +775,5 @@ data:
 {{- with .Values.keycloak.config.realmIdentityProviderMappers }}
     {{- toYaml . | nindent 4 }}
 {{- end }}
-{{- end }}
-{{- end }}
+{{- end -}}
+{{- end -}}
